# t-performance-dash

./: .babelrc  .babelrc.json  .eslintrc.js  .flake8  .gitignore  .prettierrc  .prettierrc.js  .tool-versions  CLAUDE.md  LICENSE  MbtaPerformanceAPI.py  Pipfile  README.md  data_funcs.py  deploy.sh  eslint.config.js  eslint.config.mjs  globals.d.ts  middleware.ts  next.config.js  package-lock.json  package.json  server.py  tailwind.config.js  test.sh  tsconfig.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  funding.yml  labeler.yml
.storybook/: main.js  preview.js
api/: datadashboard.ts  slowzones.ts
app/: layout.tsx  page.tsx
components/: DashboardLayout.tsx  DashboardLayoutDesktop.tsx  DashboardLayoutMobile.tsx  Layout.tsx  Legend.module.css  Legend.tsx  NavBar2.tsx  Navbar.tsx  SideNavBar.tsx  SingleDayLineChart.tsx  Title.tsx
constants/: NavBarLinks.ts  colors.ts  datapages.ts  lines.ts  sections.ts
copy/: landingCopy.tsx
dashboard/: package-lock.json  package.json
docs/: LICENSE  README.md
pages/: 404.tsx  SingleDayLineChart.tsx  Title.tsx  _app.tsx  _document.tsx  bus.tsx  index.tsx  licenses.tsx  metrics.tsx  opensource.tsx  rapidtransit.tsx  slowzones.tsx
public/: index.html  (+2 more)
server/: MbtaApi.py  MbtaPerformanceAPI.py  Pipfile  app.py  cloudformation.json  frontend-cfn.json  openapi.json  pyproject.toml  refill_alerts.py  refill_slowzones.py  requirements.txt  ruff.toml
server/.chalice/: config.json  policy.json
server/bus/: bus2train.py  check_latest_manifests.sh  compare_manifest.py  compute_stop_ids_for_gobble.py  gen_bus_data.sh  gen_latest_bus_data.sh  gen_manifests.sh  gen_stop_list.sh  generate_grouped_routes.py  gtfs_archive.py  manifest.py  setup_bus_input.sh  stop_list.py
server/chalicelib/: MbtaApi.py  MbtaPerformanceAPI.py  aggregation.py  alerts.json  cache.py  config.py  constants.py  data_funcs.py  data_funcs_agg.py  date_utils.py  dates.py  delays.py  dynamo.py  mbta_v3.py  models.py  new_trains.py  parallel.py  predictions.py  ridership.py  route_manifest.py  s3.py  s3_alerts.py  s3_historical.py  s3_historical_agg.py  sampling.py  schedule_adherence.py  scheduled_service.py  scheduled_speed.py  secrets.py  service_hours.py  service_levels.py  service_ridership_dashboard.py  speed.py  speed_restrictions.py  static_data.py  tm_benchmarks.py  weather.py
server/rankings/: feed_nrqw.json  rankings.py
server/rapid/: gen_latest_rapid_data.sh  gen_rapid_events.sh  process_events.py  setup_rapid_input.sh
server/scripts/: fetch_static_data.py  generate_line_file.py  generate_line_files.py  generate_openapi.py  stops_to_parent.py  update_max_ridership.py  update_speed_restrictions.py  update_station_distances.py  update_stations.py
server/terraform/: chalice.tf.json
server/tests/: conftest.py  test_app.py
(+950 files in other folders)
