[tool.poetry]
name = "t-performance-dash"
version = "4.2.1"
description = "TransitMatters performance visualizer for the MBTA"
authors = ["TransitMatters Labs Team"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "~3.13"
json-api-doc = "0.15.0"
requests = "^2.32.5"
pytz = "2025.2"
boto3 = "~1.40.47"
numpy = "~2.3.3"
pandas = "~2.3.3"
datadog_lambda = "~8.114.0"
dynamodb-json = "^1.4.2"
chalice-spec = "^0.7.0"
pydantic = "^2.12.0"
apispec = "^6.8.4"

[tool.poetry.group.dev.dependencies]
pip = ">=24.1"
chalice = "1.32.0"
flake8 = "~7.3.0"
black = "~25.9.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9.0"

[tool.black]
line-length = 120
target-version = ['py313']

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = false
useLibraryCodeForTypes = false
