[project]
name = "t-performance-dash"
version = "4.0.0"
description = "TransitMatters performance visualizer for the MBTA"
authors = [{ name = "TransitMatters Labs Team" }]
requires-python = ">=3.12,<3.13"
license = "MIT"
dependencies = [
    "json-api-doc==0.15.0",
    "requests~=2.32.5",
    "pytz~=2025.2",
    "boto3~=1.39.0",
    "numpy~=1.26.4",
    "pandas~=2.2.3",
    "datadog_lambda~=8.118.0",
    "dynamodb-json~=1.4.2",
    "chalice-spec~=0.7.0",
    "pydantic~=2.11.7",
    "apispec~=6.8.2",
]

[dependency-groups]
dev = [
    "chalice==1.32.0",
    "ruff>=0.14.7",
    "pytest~=9.0.2",
    "pre-commit>=4.4.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = false
useLibraryCodeForTypes = false
